[gd_scene load_steps=16 format=2]

[ext_resource path="res://maxresdefault.jpg" type="Texture" id=1]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://harjutus8.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=14]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=15]
size = 30
font_data = ExtResource( 2 )

[node name="Node" type="Node"]
script = ExtResource( 3 )

[node name="Maxresdefault" type="Sprite" parent="."]
position = Vector2( 513.5, 301.5 )
scale = Vector2( 0.797656, 0.826389 )
texture = ExtResource( 1 )

[node name="kivi" type="Button" parent="."]
margin_left = 448.0
margin_top = 538.0
margin_right = 531.0
margin_bottom = 590.0
custom_colors/font_color_disabled = Color( 1, 0.00784314, 0.00784314, 1 )
custom_fonts/font = SubResource( 1 )
text = "Kivi"

[node name="paber" type="Button" parent="."]
margin_left = 668.0
margin_top = 538.0
margin_right = 759.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 2 )
text = "paber"

[node name="kaarit" type="Button" parent="."]
margin_left = 904.0
margin_top = 542.0
margin_right = 999.0
margin_bottom = 586.0
custom_fonts/font = SubResource( 3 )
text = "karit"

[node name="week bastrard" type="RichTextLabel" parent="."]
margin_left = 351.0
margin_top = 10.0
margin_right = 704.0
margin_bottom = 98.0
custom_colors/default_color = Color( 0.921569, 1, 0.0156863, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "U weak bastard"

[node name="Punktid" type="RichTextLabel" parent="."]
margin_left = 762.0
margin_top = 20.0
margin_right = 1050.0
margin_bottom = 408.0
custom_fonts/normal_font = SubResource( 8 )
text = "Punktid:"

[node name="Punktid(senator)" type="RichTextLabel" parent="."]
margin_left = 19.0
margin_top = 12.0
margin_right = 373.0
margin_bottom = 93.0
custom_fonts/normal_font = SubResource( 9 )
text = "Punktid:"

[node name="New game" type="Button" parent="."]
margin_left = 442.0
margin_top = 120.0
margin_right = 590.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 10 )
text = "New game"

[node name="elud" type="RichTextLabel" parent="."]
margin_left = 21.0
margin_top = 520.0
margin_right = 248.0
margin_bottom = 585.0
custom_fonts/normal_font = SubResource( 11 )
text = "Elud:"

[node name="Senator" type="RichTextLabel" parent="."]
margin_left = 50.0
margin_top = 281.0
margin_right = 303.0
margin_bottom = 371.0
custom_fonts/normal_font = SubResource( 12 )
text = "Senator"

[node name="Jack" type="RichTextLabel" parent="."]
margin_left = 729.0
margin_top = 273.0
margin_right = 922.0
margin_bottom = 381.0
custom_fonts/normal_font = SubResource( 13 )
text = "Jack"

[node name="Stamina" type="RichTextLabel" parent="."]
margin_left = 764.0
margin_top = 78.0
margin_right = 999.0
margin_bottom = 151.0
custom_fonts/normal_font = SubResource( 14 )
text = "Stamina: "

[node name="Jack die" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 459.0
margin_right = 1030.0
margin_bottom = 524.0
custom_fonts/normal_font = SubResource( 15 )

[connection signal="pressed" from="kivi" to="." method="_on_kivi_pressed"]
[connection signal="pressed" from="paber" to="." method="_on_paber_pressed"]
[connection signal="pressed" from="kaarit" to="." method="_on_krit_pressed"]
